# ToolBox

./: .gitignore  README.md  build.sh  components.d.ts  package-lock.json  package.json  upx.sh  vue.config.js
.github/workflows/: main.yml
public/: index.html
src/: App.vue  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: login.sh  table.sql
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs
src-tauri/src/cmd/: mod.rs  ssh.rs
src-tauri/src/database/: mod.rs  mysql.rs
src-tauri/src/deploy/: mod.rs
src-tauri/src/gencode/: java.rs  mod.rs  text.rs
src-tauri/src/model/: mod.rs  service.rs
src-tauri/src/service/: mod.rs
src-tauri/src/terminal/: mod.rs
src/assets/style/: config.json
src/assets/style/theme/: index.css
src/components/: MyDialog.vue  deploy_exec.vue  env.vue  gen_exec.vue  help.vue  pagination.vue
src/libs/: config.js  utils.ts
src/mixin/: index.js
src/router/: index.js  index.ts
src/types/: index.d.ts
src/views/: datasource.vue  deploy.vue  gen.vue  info.vue  project.vue  quick_deploy.vue  server.vue  setting.vue  template.vue
src/views/codegen/: datasource.vue  editor.vue  index.vue  setting.vue  template.vue  templates.vue
src/views/deploy/: env.vue  index.vue  setting.vue
src/views/env/: index.vue
src/views/project/: index.vue
src/views/server/: index.vue
