[package]
name = "app"
version = "0.1.0"
description = "MyToolBox"
authors = ["Rookie"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
ssh2 = "0.9.3"
dirs = "4.0.0"
anyhow = "1.0.48"
log = "0.4"
fast_log="1.3"
tokio = { version = "1.10.0", features = ["full"] }
rbatis =  { version = "*", default-features = false, features = ["tokio1", "sqlite"] }
async-trait = "0.1.51"
rust-embed = "6.0.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
