[package]
name = "app"
version = "0.1.0"
description = "MyToolBox"
authors = ["Rookie"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
ssh2 = "0.9.3"
dirs = "4.0.0"
anyhow = "1.0.48"
tokio = { version = "1.10.0", features = ["full"] }
rbatis =  { version = "3.1.15", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "mysql"] }
async-trait = "0.1.51"
rust-embed = "6.3.0"
regex = "1.5.4"
lazy_static = "1.4.0"
#liquid = "0.26.0"
#kstring= "2.0.0"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
rbson = "2.0"
clap = "*"
dialoguer="*"
indicatif="*"
async-recursion="1.0.0"
tera = "1.17.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
